@@ -51,7 +51,7 @@ glimmer_example :  glimmer_example.o SLAP_library libglimmer.a
 	$(F77) $(GLIMMERFLAGS) -o $@ $< libglimmer.a SLAP_library/libslap.a $(LD_FLAGS)
 
 bin2ncdf: bin2ncdf.o glimmer_global.o  ncdf.o ncdf_file.o glimmer_modu.o glimmer_physcon.o glimmer_paramets.o glimmer_CFproj.o glide_messages.o
-	$(F77) -o $@ $^ $(LD_FLAGS) 
+	$(F77) -o $@ $^ $(LD_FLAGS)
 
 input2ncdf:	input2ncdf.o glimmer_global.o  ncdf.o ncdf_file.o glimmer_modu.o glimmer_paramets.o  glimmer_CFproj.o glide_messages.o
 	$(F77) -o $@ $^ $(LD_FLAGS)
